# common-words

./: Cargo.toml
crates/common-words-all/: Cargo.toml  README.md  build.rs
crates/common-words-all/examples/: simple.rs
crates/common-words-all/src/: lib.rs  types.rs
