[package]
name = "common-words-all"
description = "Most common words sorted by ngram frequency."
repository = "https://github.com/developermindsetcom/common-words"
authors = ["Eugene Hauptmann"]
license = "MIT"
version = "0.0.1"
edition = "2021"

[dependencies]

[features]
default = ["english", "one", "two", "three", "four", "five"]
all = ["chinese", "english", "french", "german", "hebrew", "italian", "russian", "spanish"]
chinese = []
english = []
french = []
german = []
hebrew = []
italian = []
russian = []
spanish = []
one = []
two = []
three = []
four = []
five = []

[profile.release]
opt-level = 3

[build-dependencies]
csv = "1.3.0"
glob = "0.3.1"
anyhow = "1.0.91"
serde = { version = "1.0.213", features = ["derive"] }
